--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,22 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.9</version>
-      <scope>test</scope>
-    </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.9</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.zm.frame</groupId>
+          <artifactId>frame</artifactId>
+          <version>1.1</version>
+      </dependency>
+      <dependency>
+          <groupId>com.zm.p2p</groupId>
+          <artifactId>p2p_base</artifactId>
+          <version>1.0</version>
+      </dependency>
   </dependencies>
   
   <build>
