增加检查文件周期配置项

--- a/conf/conf.properties
+++ b/conf/conf.properties
@@ -1,4 +1,7 @@
 maxPacketSize = 4096
 
-#如果true，则需要匹配所有字段，否则只匹配cmdid
+# 如果true，则需要匹配所有字段，否则只匹配cmdid
 ifMatchAll = true
+
+# 检查文件是否更改的周期
+checkMockInterval = 5
