--- a/pom.xml
+++ b/pom.xml
@@ -1,39 +1,44 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.zm.MockP2PServer</groupId>
-  <artifactId>MockP2PServer</artifactId>
-  <version>1.0.0</version>
-  <packaging>jar</packaging>
+    <groupId>com.zm.MockP2PServer</groupId>
+    <artifactId>MockP2PServer</artifactId>
+    <version>1.0.0</version>
+    <packaging>jar</packaging>
 
-  <name>MockP2PServer</name>
-  <url>http://maven.apache.org</url>
+    <name>MockP2PServer</name>
+    <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <dependencies>
-      <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.9</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>com.zm.frame</groupId>
-          <artifactId>frame</artifactId>
-          <version>1.1</version>
-      </dependency>
-      <dependency>
-          <groupId>com.zm.p2p</groupId>
-          <artifactId>p2p_base</artifactId>
-          <version>1.0</version>
-      </dependency>
-  </dependencies>
-  
-  <build>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zm.frame</groupId>
+            <artifactId>frame</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zm.p2p</groupId>
+            <artifactId>p2p_base</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+    </dependencies>
+
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -53,8 +58,6 @@
                     <archive>
                         <index>true</index>
                         <manifest>
-                            <classpathPrefix>lib/</classpathPrefix>
-                            <addClasspath>true</addClasspath>
                             <mainClass>com.zm.MockP2PServer.App</mainClass>
                         </manifest>
                     </archive>
@@ -63,25 +66,20 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.8</version>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <!-- put your configurations here -->
+                </configuration>
                 <executions>
                     <execution>
-                        <id>copy-dependencies</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>copy-dependencies</goal>
+                            <goal>shade</goal>
                         </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
-                            <overWriteReleases>true</overWriteReleases>
-                            <overWriteSnapshots>true</overWriteSnapshots>
-                            <overWriteIfNewer>true</overWriteIfNewer>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
 </project>
